{
  "version": 4,
  "terraform_version": "1.0.3",
  "serial": 163,
  "lineage": "5821c04f-17a9-d719-3042-2869342ad9d9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "natIp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-02f8b61991add9cc4",
            "domain": "vpc",
            "id": "eipalloc-0c6004154ec3fba05",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-0dfd179ad48e70cd8",
            "private_dns": "ip-10-1-0-72.ap-south-1.compute.internal",
            "private_ip": "10.1.0.72",
            "public_dns": "ec2-3-109-44-44.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.109.44.44",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "tf-petclinic-dev-natIp"
            },
            "tags_all": {
              "Name": "tf-petclinic-dev-natIp"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04db49c0fb2215364",
            "arn": "arn:aws:ec2:ap-south-1:639555006157:instance/i-0cb55afb4e92b19d5",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0cb55afb4e92b19d5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "petclinic-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-047fed0ad029ef331",
            "private_dns": "ip-10-1-0-51.ap-south-1.compute.internal",
            "private_ip": "10.1.0.51",
            "public_dns": "ec2-13-233-89-98.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.233.89.98",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a9b6fa1c59f08a13",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0240373047206c907",
            "tags": {
              "Name": "tf-petclinic-dev-bastion"
            },
            "tags_all": {
              "Name": "tf-petclinic-dev-bastion"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-09e072dc58d0914ff"
            ]
          },
          "dependencies": [
            "aws_key_pair.petclinic",
            "aws_security_group.bastion",
            "aws_subnet.pubsubnet",
            "aws_vpc.petclinic"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:639555006157:internet-gateway/igw-072d94c7856aa1297",
            "id": "igw-072d94c7856aa1297",
            "owner_id": "639555006157",
            "tags": {
              "Name": "tf-petclinic-dev-gw"
            },
            "tags_all": {
              "Name": "tf-petclinic-dev-gw"
            },
            "vpc_id": "vpc-0204e8ba2493befde"
          },
          "dependencies": [
            "aws_vpc.petclinic"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natGw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c6004154ec3fba05",
            "connectivity_type": "public",
            "id": "nat-0e31bfc6d5f8dcf68",
            "network_interface_id": "eni-0dfd179ad48e70cd8",
            "private_ip": "10.1.0.72",
            "public_ip": "3.109.44.44",
            "subnet_id": "subnet-0240373047206c907",
            "tags": {
              "Name": "tf-petclinic-dev-natGw"
            },
            "tags_all": {
              "Name": "tf-petclinic-dev-natGw"
            }
          },
          "dependencies": [
            "aws_eip.natIp",
            "aws_subnet.pubsubnet",
            "aws_vpc.petclinic"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dataroute",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:639555006157:route-table/rtb-0c8030213302db802",
            "id": "rtb-0c8030213302db802",
            "owner_id": "639555006157",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0e31bfc6d5f8dcf68",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tf-petclinic-dev-dataroute"
            },
            "tags_all": {
              "Name": "tf-petclinic-dev-dataroute"
            },
            "vpc_id": "vpc-0204e8ba2493befde"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.natIp",
            "aws_nat_gateway.natGw",
            "aws_subnet.pubsubnet",
            "aws_vpc.petclinic"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "privateroute",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:639555006157:route-table/rtb-01a401d52b9d48fe7",
            "id": "rtb-01a401d52b9d48fe7",
            "owner_id": "639555006157",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0e31bfc6d5f8dcf68",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tf-petclinic-dev-privateroute"
            },
            "tags_all": {
              "Name": "tf-petclinic-dev-privateroute"
            },
            "vpc_id": "vpc-0204e8ba2493befde"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.natIp",
            "aws_nat_gateway.natGw",
            "aws_subnet.pubsubnet",
            "aws_vpc.petclinic"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "publicroute",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:639555006157:route-table/rtb-0a1c0cb716f1a2207",
            "id": "rtb-0a1c0cb716f1a2207",
            "owner_id": "639555006157",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-072d94c7856aa1297",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tf-petclinic-dev-publicroute"
            },
            "tags_all": {
              "Name": "tf-petclinic-dev-publicroute"
            },
            "vpc_id": "vpc-0204e8ba2493befde"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.petclinic"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "datasubassociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e9f5ec7926ed9f0d",
            "route_table_id": "rtb-0c8030213302db802",
            "subnet_id": "subnet-0bdaac943046aaf24"
          },
          "dependencies": [
            "aws_eip.natIp",
            "aws_nat_gateway.natGw",
            "aws_route_table.dataroute",
            "aws_subnet.datasubnets",
            "aws_subnet.pubsubnet",
            "aws_vpc.petclinic"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04fed175ba0ae2d60",
            "route_table_id": "rtb-0c8030213302db802",
            "subnet_id": "subnet-0a8cc7ae028f292c7"
          },
          "dependencies": [
            "aws_route_table.dataroute",
            "aws_subnet.datasubnets",
            "aws_subnet.pubsubnet",
            "aws_vpc.petclinic",
            "aws_eip.natIp",
            "aws_nat_gateway.natGw"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-077e62696fac4e4eb",
            "route_table_id": "rtb-0c8030213302db802",
            "subnet_id": "subnet-000b752811bb387ca"
          },
          "dependencies": [
            "aws_subnet.pubsubnet",
            "aws_vpc.petclinic",
            "aws_eip.natIp",
            "aws_nat_gateway.natGw",
            "aws_route_table.dataroute",
            "aws_subnet.datasubnets"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prisubassociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08e21dc6d280092d2",
            "route_table_id": "rtb-01a401d52b9d48fe7",
            "subnet_id": "subnet-0f12eb2852854418e"
          },
          "dependencies": [
            "aws_subnet.prisubnets",
            "aws_subnet.pubsubnet",
            "aws_vpc.petclinic",
            "aws_eip.natIp",
            "aws_nat_gateway.natGw",
            "aws_route_table.privateroute"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-039007b1def065ffa",
            "route_table_id": "rtb-01a401d52b9d48fe7",
            "subnet_id": "subnet-0cb50644bb4df1f80"
          },
          "dependencies": [
            "aws_subnet.pubsubnet",
            "aws_vpc.petclinic",
            "aws_eip.natIp",
            "aws_nat_gateway.natGw",
            "aws_route_table.privateroute",
            "aws_subnet.prisubnets"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bd1ca69e4a086419",
            "route_table_id": "rtb-01a401d52b9d48fe7",
            "subnet_id": "subnet-0b584246736ca959e"
          },
          "dependencies": [
            "aws_subnet.pubsubnet",
            "aws_vpc.petclinic",
            "aws_eip.natIp",
            "aws_nat_gateway.natGw",
            "aws_route_table.privateroute",
            "aws_subnet.prisubnets"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pubsubassociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a7ccc29f37fa7035",
            "route_table_id": "rtb-0a1c0cb716f1a2207",
            "subnet_id": "subnet-0240373047206c907"
          },
          "dependencies": [
            "aws_route_table.publicroute",
            "aws_subnet.pubsubnet",
            "aws_vpc.petclinic",
            "aws_internet_gateway.gw"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04ea8221cb1539bdf",
            "route_table_id": "rtb-0a1c0cb716f1a2207",
            "subnet_id": "subnet-021ff23cf85881f69"
          },
          "dependencies": [
            "aws_vpc.petclinic",
            "aws_internet_gateway.gw",
            "aws_route_table.publicroute",
            "aws_subnet.pubsubnet"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-050d782bef17c77a2",
            "route_table_id": "rtb-0a1c0cb716f1a2207",
            "subnet_id": "subnet-0009cf5bcc3ff9d0b"
          },
          "dependencies": [
            "aws_route_table.publicroute",
            "aws_subnet.pubsubnet",
            "aws_vpc.petclinic",
            "aws_internet_gateway.gw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:639555006157:security-group/sg-024d9dc7f65ac4482",
            "description": "Allow alb inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-024d9dc7f65ac4482",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "alb  from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb",
            "name_prefix": "",
            "owner_id": "639555006157",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tf-petclinic-dev-alb-sg"
            },
            "tags_all": {
              "Name": "tf-petclinic-dev-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0204e8ba2493befde"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.petclinic"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:639555006157:security-group/sg-09e072dc58d0914ff",
            "description": "Allow SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09e072dc58d0914ff",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH  from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bastion",
            "name_prefix": "",
            "owner_id": "639555006157",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tf-petclinic-dev-bastion-sg"
            },
            "tags_all": {
              "Name": "tf-petclinic-dev-bastion-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0204e8ba2493befde"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.petclinic"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:639555006157:security-group/sg-000b7572306a882c4",
            "description": "Allow SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-000b7572306a882c4",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "SSH  from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ea176421012561c9"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "SSH from VPC",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09e072dc58d0914ff"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "rds",
            "name_prefix": "",
            "owner_id": "639555006157",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tf-petclinic-dev-rds-sg"
            },
            "tags_all": {
              "Name": "tf-petclinic-dev-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0204e8ba2493befde"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion",
            "aws_security_group.tomcat",
            "aws_vpc.petclinic"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tomcat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:639555006157:security-group/sg-0ea176421012561c9",
            "description": "Allow SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ea176421012561c9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH  from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "tomcat",
            "name_prefix": "",
            "owner_id": "639555006157",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tf-petclinic-dev-tomcat-sg"
            },
            "tags_all": {
              "Name": "tf-petclinic-dev-tomcat-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0204e8ba2493befde"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.petclinic"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "datasubnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:639555006157:subnet/subnet-0bdaac943046aaf24",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.1.6.0/24",
            "id": "subnet-0bdaac943046aaf24",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "639555006157",
            "tags": {
              "Name": "tf-petclinic-dev-datasubnets-1"
            },
            "tags_all": {
              "Name": "tf-petclinic-dev-datasubnets-1"
            },
            "vpc_id": "vpc-0204e8ba2493befde"
          },
          "dependencies": [
            "aws_vpc.petclinic"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:639555006157:subnet/subnet-0a8cc7ae028f292c7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.1.7.0/24",
            "id": "subnet-0a8cc7ae028f292c7",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "639555006157",
            "tags": {
              "Name": "tf-petclinic-dev-datasubnets-2"
            },
            "tags_all": {
              "Name": "tf-petclinic-dev-datasubnets-2"
            },
            "vpc_id": "vpc-0204e8ba2493befde"
          },
          "dependencies": [
            "aws_vpc.petclinic"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:639555006157:subnet/subnet-000b752811bb387ca",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.1.8.0/24",
            "id": "subnet-000b752811bb387ca",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "639555006157",
            "tags": {
              "Name": "tf-petclinic-dev-datasubnets-3"
            },
            "tags_all": {
              "Name": "tf-petclinic-dev-datasubnets-3"
            },
            "vpc_id": "vpc-0204e8ba2493befde"
          },
          "dependencies": [
            "aws_vpc.petclinic"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prisubnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:639555006157:subnet/subnet-0f12eb2852854418e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.1.3.0/24",
            "id": "subnet-0f12eb2852854418e",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "639555006157",
            "tags": {
              "Name": "tf-petclinic-dev-prisubnets-1"
            },
            "tags_all": {
              "Name": "tf-petclinic-dev-prisubnets-1"
            },
            "vpc_id": "vpc-0204e8ba2493befde"
          },
          "dependencies": [
            "aws_vpc.petclinic"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:639555006157:subnet/subnet-0cb50644bb4df1f80",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.1.4.0/24",
            "id": "subnet-0cb50644bb4df1f80",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "639555006157",
            "tags": {
              "Name": "tf-petclinic-dev-prisubnets-2"
            },
            "tags_all": {
              "Name": "tf-petclinic-dev-prisubnets-2"
            },
            "vpc_id": "vpc-0204e8ba2493befde"
          },
          "dependencies": [
            "aws_vpc.petclinic"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:639555006157:subnet/subnet-0b584246736ca959e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.1.5.0/24",
            "id": "subnet-0b584246736ca959e",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "639555006157",
            "tags": {
              "Name": "tf-petclinic-dev-prisubnets-3"
            },
            "tags_all": {
              "Name": "tf-petclinic-dev-prisubnets-3"
            },
            "vpc_id": "vpc-0204e8ba2493befde"
          },
          "dependencies": [
            "aws_vpc.petclinic"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pubsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:639555006157:subnet/subnet-0240373047206c907",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.1.0.0/24",
            "id": "subnet-0240373047206c907",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "639555006157",
            "tags": {
              "Name": "tf-petclinic-dev-pubsunet-1"
            },
            "tags_all": {
              "Name": "tf-petclinic-dev-pubsunet-1"
            },
            "vpc_id": "vpc-0204e8ba2493befde"
          },
          "dependencies": [
            "aws_vpc.petclinic"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:639555006157:subnet/subnet-021ff23cf85881f69",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.1.1.0/24",
            "id": "subnet-021ff23cf85881f69",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "639555006157",
            "tags": {
              "Name": "tf-petclinic-dev-pubsunet-2"
            },
            "tags_all": {
              "Name": "tf-petclinic-dev-pubsunet-2"
            },
            "vpc_id": "vpc-0204e8ba2493befde"
          },
          "dependencies": [
            "aws_vpc.petclinic"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:639555006157:subnet/subnet-0009cf5bcc3ff9d0b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.1.2.0/24",
            "id": "subnet-0009cf5bcc3ff9d0b",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "639555006157",
            "tags": {
              "Name": "tf-petclinic-dev-pubsunet-3"
            },
            "tags_all": {
              "Name": "tf-petclinic-dev-pubsunet-3"
            },
            "vpc_id": "vpc-0204e8ba2493befde"
          },
          "dependencies": [
            "aws_vpc.petclinic"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "petclinic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:639555006157:vpc/vpc-0204e8ba2493befde",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0d9f9b0b9539a41ab",
            "default_route_table_id": "rtb-06aac0d5689f36433",
            "default_security_group_id": "sg-0cf8d25afc5fdced6",
            "dhcp_options_id": "dopt-cfb61ea4",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0204e8ba2493befde",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-06aac0d5689f36433",
            "owner_id": "639555006157",
            "tags": {
              "Name": "tf-petclinic-dev"
            },
            "tags_all": {
              "Name": "tf-petclinic-dev"
            }
          }
        }
      ]
    }
  ]
}